k8s/overlays/internal/patch-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dns-management
  labels:
    environment.fmn.dev/name: internal
